--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wizytówka</title>
     <link href="/normalize.css" rel="stylesheet" type="text/css">
-	<link href="/style.css" rel="stylesheet" type="text/css">
+    <link href="/style.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
-    
+    <main>
+        <aticle>
+            <img src="/avatar.png" alt="Avatar użytkownika" />
+            <header>
+                <h1> Imię i nazwisko</h1>
+                <p>frontend developer</p>
+            </header>
+            <p>Programista z kilkunastoletnim doświadczeniem, fotograf, operator drona, właściciel Sokoła Millennium (na
+                razie tylko z Lego), prelegent i szkoleniowiec. Uwielbia eksperymentować z nowymi technologiami, w
+                swojej twórczości ocierając się o sztukę. </p>
+            <p>W sieci: <a href="#">Facebook</a>, <a href="#">GitHub</a>, <a href="#">Instagram</a>.</p>
+        </aticle>
+    </main>
 </body>
+
 </html>
