basic styles for background and card

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <main>
+    <main class="card">
         <aticle>
             <img src="/avatar.png" alt="Avatar użytkownika" />
             <header>
