--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
 <body>
     <main class="card">
-        <aticle>
+        <aticle class="card__content">
             <img src="/avatar.png" alt="Avatar użytkownika" />
+            <div class="card__info">
             <header>
                 <h1 class="card__name"> Imię nazwisko</h1>
                 <p class="card__position">frontend developer</p>
@@ -21,6 +22,7 @@
                 razie tylko z Lego), prelegent i szkoleniowiec. Uwielbia eksperymentować z nowymi technologiami, w
                 swojej twórczości ocierając się o sztukę. </p>
             <p class="card__description">W sieci: <a class="card__link" href="#">Facebook</a>, <a class="card__link" href="#">GitHub</a>, <a class="card__link" href="#">Instagram</a>.</p>
+        </div>
         </aticle>
     </main>
 </body>
