--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <h1 class="card__name"> Imię nazwisko</h1>
                 <p class="card__position">frontend developer</p>
             </header>
-            <p class="card__description">Programista z kilkunastoletnim doświadczeniem, fotograf, operator drona, właściciel Sokoła Millennium (na
-                razie tylko z Lego), prelegent i szkoleniowiec. Uwielbia eksperymentować z nowymi technologiami, w
+            <p class="card__description">Programista z <span class="special">kilkunastoletnim doświadczeniem</span>, fotograf, operator drona, właściciel Sokoła Millennium (na
+                razie tylko z Lego), <span class="special">prelegent i szkoleniowiec</span>. Uwielbia eksperymentować z nowymi technologiami, w
                 swojej twórczości ocierając się o sztukę. </p>
             <p class="card__description">W sieci: <a class="card__link" href="#">Facebook</a>, <a class="card__link" href="#">GitHub</a>, <a class="card__link" href="#">Instagram</a>.</p>
         </div>
